# Bread-Physics

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  imgui.ini
demo/: application.cpp  application.hpp  b_window.cpp  b_window.hpp  framebuffer.cpp  framebuffer.hpp  main.cpp  properties.cpp  scene.cpp  scene.hpp  ui.cpp  ui.hpp  uicontext.hpp  window.cpp  window.hpp
demo/objects/: camera.cpp  camera.hpp  object.cpp  object.hpp
demo/raylib/: cubes.cpp  dragcubes.cpp  render.cpp  render.hpp  test.cpp
demo/render/: framebuffer.cpp  framebuffer.hpp  imgui_helper.cpp  imgui_helper.hpp  mesh.cpp  mesh.hpp  vertexbuffer.cpp  vertexbuffer.hpp
demo/shader/: b_shader.cpp  b_shader.hpp
demo/shaders/: grid.frag  shader.frag  shader.vert
demo/ui/: properties_panel.cpp  properties_panel.hpp  scene_view.cpp  scene_view.hpp
ext/Bread-Math/: .gitignore  README.md
ext/Bread-Math/demo/: InertiaTensor.cpp  Main.cpp  MatrixTesting.cpp  MemoryTesting.cpp  Quaternion.cpp  RaylibTesting.cpp  TransformInverse.cpp  TypeConversion.cpp  Types.cpp  VectorTesting.cpp  VectorTransformation.cpp
ext/Bread-Math/include/bMath/: bMath.hpp  common.hpp  functions.hpp  fwd.hpp  geometry.hpp  matrix.hpp  physics.hpp  quaternion.hpp  vector.hpp
ext/Bread-Math/include/bMath/ext/: iostream.hpp  raylib.hpp  string.hpp
include/: Bread-Raylib.hpp
include/bEngine/: body.hpp  collide_fine.hpp  collide_narrow.hpp  contacts.hpp  forcegen.hpp  interia_tensor.hpp  mesh.hpp  render.hpp  rigidbody.hpp  world.hpp
include/bMath/: Float.hpp  Geometry.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp  bMath.hpp  float.hpp  functions.hpp  fwd.hpp  geometry.hpp  iostream.hpp  matrix.hpp  physics.hpp  vector.hpp
include/bMath/ext/: iostream.hpp  raylib.hpp
include/bphysics/: collide_narrow.hpp  contacts.hpp  forcegen.hpp  helper.hpp  interia_tensor.hpp  rigidbody.hpp  world.hpp
src/: Vector.cpp  body.cpp  collide_narrow.cpp  contacts.cpp  render.cpp  rigidbody.cpp  world.cpp
